fixed y overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1188,7 +1188,7 @@ section {
   right: 0;
   background-color: rgb(245, 248, 244);
   overflow-x: hidden;
-  padding-top: 10px;
+  padding-top: 4px;
   padding-bottom: 10px;
   
 }
